fix: do nav on mobile better

--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -7,4 +7,9 @@
             }
         }
     }
+    .nav {
+        &__list {
+            justify-content: center;
+        }
+    }
 }
